<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AllRae</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_youjin_tab">Youjin_tab</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_writing">Writing</string>
    <string name="title_activity_my">My</string>
    <string name="button_previous">back</string>
    <string name="button_next">Next</string>
    <string name="button_skip">Skip</string>
    <string name="button_save">Save</string>
    <string name="button_end">End</string>
    <string name="button_album">Album</string>
    <string name="pay">원</string>
    <string name="cost_spinner">선택</string>
    <string name="hometype_spinner">선택</string>
    <string name="area_spinner">선택</string>
    <string name="writing_start">여행기 작성</string>
    <string name="basic_info">여행기 시작</string>
    <string name="category_select">카테고리 선택</string>
    <string name="select_thumbnail">대표사진 선택</string>
    <string name="modify_category">작성 내용 편집</string>
    <string name="app_color">#b7efd7</string>
    <string name="text_color_mint">#9be4cc</string>
    <string name="text_color_grey">#888888</string>
    <string name="text_color_white">#ffffff</string>
    <string name="text_travelnote_saved"></string>
    <string name="button_color_yellow">#ffff66</string>
    <string name="write_title"></string>
    <string name="write_countpeople"></string>
    <string name="write_place">여행지</string>
    <string name="write_restaurant">식당</string>
    <string name="write_restaurant_cost">가격대</string>
    <string name="write_restaurant_taste">맛</string>
    <string name="write_restaurant_clean">위생</string>
    <string name="write_restaurant_service">서비스</string>
    <string name="write_home">숙소</string>
    <string name="write_home_type">형태</string>
    <string name="home_type">선택</string>
    <string name="write_home_cost">비용</string>
    <string name="write_home_clean">청결도</string>
    <string name="write_home_bath">화장실</string>
    <string name="radio_home_bath1">방마다</string>
    <string name="radio_home_bath2">공용</string>
    <string name="radio_home_bath3">없음</string>
    <string name="write_transfer">이동</string>
    <string name="write_transfer_info">작성하려는 장소까지 이동한 정보를 입력해주세요.</string>
    <string name="write_transfer_type">수단</string>
    <string name="write_transfer_type_car">자동차</string>
    <string name="write_transfer_type_public">버스/지하철</string>
    <string name="write_transfer_type_walk">도보</string>
    <string name="write_transfer_type_train">기차</string>
    <string name="write_transfer_type_air">비행기/배</string>
    <string name="write_transfer_time">시간</string>
    <string name="write_transfer_time_minute">분</string>
    <string name="write_transfer_cost">비용</string>
    <string name="write_transfer_cost_won">원</string>
    <string name="write_date">날짜</string>
    <string name="write_position">장소 및 위치</string>
    <string name="text_write_title">제목</string>
    <string name="hint_write_title">여행기의 제목을 입력하세요.</string>
    <string name="text_write_date">날짜</string>
    <string name="text_write_season">계절</string>
    <string name="text_write_countpeople">인원</string>
    <string name="text_write_maintransfer">주요 이동수단</string>
    <string name="text_write_departure">출발지</string>
    <string name="text_write_people">명</string>
    <string name="radio_write_season_spring">봄</string>
    <string name="radio_write_season_summer">여름</string>
    <string name="radio_write_season_fall">가을</string>
    <string name="radio_write_season_winter">겨울</string>
    <string name="radio_write_maintrasfer_car">자동차</string>
    <string name="radio_write_maintrasfer_public">대중교통</string>
    <string name="radio_write_maintrasfer_walk">도보</string>
    <string name="button_write_departure01">강원</string>
    <string name="button_write_departure02">경기</string>
    <string name="button_write_departure03">경남</string>
    <string name="button_write_departure04">경북</string>
    <string name="button_write_departure05">광주</string>
    <string name="button_write_departure06">대전</string>
    <string name="button_write_departure07">대구</string>
    <string name="button_write_departure08">부산</string>
    <string name="button_write_departure09">서울</string>
    <string name="button_write_departure10">세종</string>
    <string name="button_write_departure11">인천</string>
    <string name="button_write_departure12">울산</string>
    <string name="button_write_departure13">전북</string>
    <string name="button_write_departure14">전남</string>
    <string name="button_write_departure15">제주</string>
    <string name="button_write_departure16">충남</string>
    <string name="button_write_departure17">충북</string>
    <string name="button_write_place">여행지</string>
    <string name="button_write_restaurant">식당</string>
    <string name="button_write_home">숙소</string>
    <string name="button_write_transfer">이동</string>
    <string name="text_write_place">여행지</string>
    <string name="text_write_restaurant">식당</string>
    <string name="text_write_home">숙소</string>
    <string name="button_write_continue">이어서 작성</string>
    <string name="button_write_hold">나가기</string>
    <string name="button_write_complete">여행기 마침</string>
    <string name="button_write_edit">작성 내용 편집</string>
    <string name="travelnote_saved">여행기가 추가되었습니다.</string>
    <string name="travelnote_ordermodify">내용을 편집하거나 순서를 변경할 수 있습니다.</string>
    <string name="title_activity_travelnote_start">MainActivity</string>
    <string name="title_activity_travelnote_category">MainActivity</string>
    <string name="title_activity_travelnote_place">MainActivity</string>
    <string name="title_activity_travelnote_restaurant">MainActivity</string>
    <string name="title_activity_travelnote_lodging">MainActivity</string>
    <string name="title_activity_travelnote_move">MainActivity</string>
    <string name="title_activity_travelnote_saved">MainActivity</string>
    <string name="title_activity_travelnote_thumbnail">MainActivity</string>
    <string name="title_activity_travelnote_category_edit">MainActivity</string>
    <string name="title_activity_finding_user_page">FindingUserPageActivity</string>
    <string name="title_activity_image1">Image1Activity</string>

</resources>
