<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:background="#aaAFEEEE"
            android:gravity="center"
            android:text="@string/writing_start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="#aaAFEEEE"
            android:text="@string/button_skip" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="#aaAFEEEE"
            android:text="@string/button_save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_transfer_info"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/write_transfer_type" >
            </TextView>

            <RadioGroup
                android:id="@+id/radiogroup1_transfer_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/write_transfer_type_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_transfer_type_car" />

                <RadioButton
                    android:id="@+id/write_transfer_type_train"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_transfer_type_train" />

                <RadioButton
                    android:id="@+id/write_transfer_type_walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_transfer_type_walk" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="" >
            </TextView>

            <RadioGroup
                android:id="@+id/radiogroup2_transfer_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/write_transfer_type_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_transfer_type_public" />

                <RadioButton
                    android:id="@+id/write_transfer_type_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_transfer_type_air" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/write_transfer_time" >
            </TextView>

            <EditText
                android:id="@+id/write_transfer_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=" 2"
                android:inputType="number" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/write_transfer_time_minute" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/write_transfer_cost" >
            </TextView>

            <EditText
                android:id="@+id/write_transfer_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pay" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>