<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="#aaAFEEEE"
            android:text="@string/button_previous" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:background="#aaAFEEEE"
            android:gravity="center"
            android:text="@string/basic_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="#aaAFEEEE"
            android:text="@string/button_next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_write_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_write_title" >
            </TextView>

            <EditText
                android:id="@+id/write_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:hint="@string/hint_write_title"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_write_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/text_write_date" >
            </TextView>

            <TextView
                android:id="@+id/date_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text=""
                android:textSize="15dp" />

            <Button
                android:id="@+id/date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="날짜 변경"
                android:textSize="15dp" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_write_season" />

            <RadioGroup
                android:id="@+id/radiogroup_season_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_write_season_spring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/radio_write_season_spring"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radio_write_season_summer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/radio_write_season_summer"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radio_write_season_fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/radio_write_season_fall"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radio_write_season_winter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/radio_write_season_winter"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_write_countpeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_write_countpeople" >
            </TextView>

            <EditText
                android:id="@+id/write_countpeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="number" >

            </EditText>

            <TextView
                android:id="@+id/text_write_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="90dp"
                android:text="@string/text_write_people" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_write_maintransfer"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/text_write_maintransfer" >
            </TextView>

            <RadioGroup
                android:id="@+id/radiogroup_move_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_write_maintrasfer_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_write_maintrasfer_car"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radio_write_maintrasfer_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_write_maintrasfer_public"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radio_write_maintrasfer_walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_write_maintrasfer_walk"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_write_departure" >
            </TextView>

            <Spinner
                android:id="@+id/mySpinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:prompt="@string/area_spinner" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>