<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#aaAFEEEE"
            android:text="@string/button_previous" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:background="#aaAFEEEE"
            android:gravity="center"
            android:text="@string/category_select"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_write_place"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="10dp"
            android:background="#ffff66"
            android:text="@string/button_write_place" />

        <Button
            android:id="@+id/button_write_restaurant"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="10dp"
            android:background="#ffff66"
            android:text="@string/button_write_restaurant" />

        <Button
            android:id="@+id/button_write_home"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_margin="10dp"
            android:background="#ffff66"
            android:text="@string/button_write_home" />
    </LinearLayout>

</LinearLayout>