<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_write_departure_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="#aaAFEEEE"
            android:text="@string/button_previous" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="0.6"
            android:background="#aaAFEEEE"
            android:gravity="center"
            android:text="@string/modify_category"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="#aaAFEEEE"
            android:text="@string/button_end" />
    </LinearLayout>

    <org.pyframe.tools.view.DndListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:cacheColorHint="#00000000"
        android:drawSelectorOnTop="false"
        android:fastScrollEnabled="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/travelnote_ordermodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/travelnote_ordermodify"
            android:textColor="@string/text_color_grey" >
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" >
    </ListView>

</LinearLayout>